2-Commit Implementación del 99% del procedimiento de cargar y leer el archivo xls, de grupo empresa, unidad legal y establecimientos. Aplicación de validación de completitud y visualización del reporte de registros incompletos. Insertccion en las tablas de la base de datos...

--- a/GrupoEmpresarial-war/web/interfaz/utilidades/cpt-cargar-archivo-xls.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/utilidades/cpt-cargar-archivo-xls.xhtml
@@ -7,17 +7,17 @@
 
     <p:panel style="border: none; padding:0px;">
         <h:form id="frmCargarArchivoXls">
-            <p:growl id="msnInforGruEmp" sticky="true" showDetail="true" life="3000" />
+            <p:growl id="msnInforGruEmp" showDetail="true" life="6000" />
 
             <p:fileUpload id="btnCargarXlsGrupoEmpresa" fileUploadListener="#{MbLeerExcel.subirArchivoGrupoEmpresarial}" style="width: 50%"
                           multiple="false" 
                           mode="advanced" dragDropSupport="false" label="Seleccionar" cancelLabel="Cancelar" uploadLabel="Subir" 
                           invalidFileMessage="Tipo de archivo no soportado"  oncomplete="PF('dlgCargarXls').show();" 
-                          update="msnInforGruEmp,dtInconsistenciasXls" allowTypes="/(\.|\/)(xls)$/" />
+                          update="msnInforGruEmp,dlReporteCargue" allowTypes="/(\.|\/)(xls)$/" />
 
-            <p:dialog header="Reporte Cargar Información" widgetVar="dlgCargarXls"  appendTo="@(body)"
+            <p:dialog id="dlReporteCargue" header="Reporte Cargar Información" widgetVar="dlgCargarXls"  appendTo="@(body)"
                       resizable="false" modal="false" width="800" height="550">
-                <p:outputPanel deferred="true">
+                <p:outputPanel  rendered="#{!MbLeerExcel.sePuedeInsertarDatos}">
                     <p:dataList id="dtInconsistenciasXls" value="#{MbLeerExcel.listaInconsistencias}" 
                                 var="inconsistencia" itemType="none" paginator="true" rows="22" styleClass="paginated" paginatorPosition="bottom">
                         <p:commandLink oncomplete="PF('dlgInconsistencia').show()" title="Lista Variables" update="#{frmPadre}:frmCargarArchivoXls:dtVariableInconsistencia" process="@this"
@@ -31,9 +31,22 @@
                         <p:outputLabel value="&nbsp;&nbsp;&nbsp;&nbsp;ID #: #{inconsistencia.id}" style="display:inline-block"/>
                         <p:outputLabel value="&nbsp;&nbsp;&nbsp;&nbsp;Incompletos: #{inconsistencia.listaAtributosRequeridos.size()}" style="display:inline-block"/>
                     </p:dataList>
+                    <h3 class="titulo-left-h3">Atención:</h3>
+                    <p:outputLabel value="Para poder cargar los registros y actualizar la información, cada una de las variables solicitadas como requeridas (*) para cada uno de los registros, debe ser diligenciada. Por favor ajustar los datos de cada variable para cada registro que el reporte indica y cargar de nuevo. "/>
                 </p:outputPanel>
-                <h3 class="titulo-left-h3">Atención:</h3>
-                <p:outputLabel value="Para poder cargar los registros y actualizar la información, cada una de las variables solicitadas como requeridas (*) para cada uno de los registros, debe ser diligenciada. Por favor ajustar los datos de cada variable para cada registro que el reporte indica y cargar de nuevo. "/>
+                <p:outputPanel  rendered="#{MbLeerExcel.sePuedeInsertarDatos}">
+                    <h3 class="titulo-left-h3">Continuar:</h3>
+                    <p:outputLabel value="Se ha realizado la validación de completitud en las variables requeridas de los registros del archivo. Como resultado, la información se encuentra lista para ser actualizada."/>
+                    <p:commandButton value="Actualizar Datos" action="#{MbLeerExcel.insertarRegistrosBodega}" oncomplete="PF('dlgCargarXls').hide();"
+                                     update="#{frmPadre}:frmCargarArchivoXls:msnInforGruEmp" process="@this" style="float: right; top: 3px;">
+                        <p:confirm header="Confirmación" icon="ui-icon-alert" message="Esta a punto de actualizar la información, desea continuar?"/>
+                    </p:commandButton>
+
+                    <p:confirmDialog global="true" showEffect="fade" >
+                        <p:commandButton value="Aceptar" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                        <p:commandButton value="Cancelar" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+                    </p:confirmDialog>
+                </p:outputPanel>
             </p:dialog>
 
             <p:dialog  header="Lista Variables Requeridas"  widgetVar="dlgInconsistencia" modal="true"  resizable="false" appendTo="@(body)">
