Se modificó: Validación formularios

--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-tamano.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-tamano.xhtml
@@ -34,19 +34,19 @@
             <p:inputText id="txtNumeroMujeres" value="#{MbFormEstablecimiento.tamanoSeleccionado.mujeresOcupadas}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Las Mujeres ocupadas son requeridos." label="Mujeres ocupadas"/>
             <p:message for="txtNumeroMujeres" />
 
-            <p:outputLabel value="Activos: *" styleClass="etiquetaFormulario"/>
+            <p:outputLabel value="Activos: ($) *" styleClass="etiquetaFormulario"/>
             <p:inputText id="txtActivo" value="#{MbFormEstablecimiento.tamanoSeleccionado.activo}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Activos son requeridos." label="Activos"/>
             <p:message for="txtActivo" />
 
-            <p:outputLabel value="Ingresos operacionales: *" styleClass="etiquetaFormulario"/>
+            <p:outputLabel value="Ingresos operacionales: ($) *" styleClass="etiquetaFormulario"/>
             <p:inputText id="txtIngresosOperacionales" value="#{MbFormEstablecimiento.tamanoSeleccionado.ingresosOperacionales}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Ingresos operacionales son requeridos." label="Ingresos operacionales"/>
             <p:message for="txtIngresosOperacionales" />
 
-            <p:outputLabel value="Costo de ventas: *" styleClass="etiquetaFormulario"/>
+            <p:outputLabel value="Costo de ventas: ($) *" styleClass="etiquetaFormulario"/>
             <p:inputText id="txtCostoVentas" value="#{MbFormEstablecimiento.tamanoSeleccionado.costoVentasEst}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Costo de ventas es requerido." label="Costo de ventas"/>
             <p:message for="txtCostoVentas" />
 
-            <p:outputLabel value="Gastos operacionales: *" styleClass="etiquetaFormulario"/>
+            <p:outputLabel value="Gastos operacionales: ($) *" styleClass="etiquetaFormulario"/>
             <p:inputText id="txtGastosOperacionales" value="#{MbFormEstablecimiento.tamanoSeleccionado.gastosOperacionales}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Gastos operacionales son requerido." label="Gastos operacionales"/>
             <p:message for="txtGastosOperacionales" />
 
