--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-tamano.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-tamano.xhtml
@@ -42,39 +42,39 @@
             <p:inputText id="txtNumeroMujeres" value="#{MbFormUnidadLegal.tamanoSeleccionado.mujeresOcupadas}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Número de mujeres es requerido." label="Número de mujeres"/>
             <p:message for="txtNumeroMujeres" />
 
-            <p:outputLabel value="Activo: *" styleClass="etiquetaFormulario" />
+            <p:outputLabel value="Activo: ($) *" styleClass="etiquetaFormulario" />
             <p:inputText id="txtActivo" value="#{MbFormUnidadLegal.tamanoSeleccionado.activo}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Activo es requerido." label="Activo"/>
             <p:message for="txtActivo" />
 
-            <p:outputLabel value="Pasivo: *" styleClass="etiquetaFormulario" />
+            <p:outputLabel value="Pasivo: ($) *" styleClass="etiquetaFormulario" />
             <p:inputText id="txtPasivo" value="#{MbFormUnidadLegal.tamanoSeleccionado.pasivo}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Pasivo es requerido." label="Pasivo"/>
             <p:message for="txtPasivo" />
 
-            <p:outputLabel value="Patrimonio: *" styleClass="etiquetaFormulario" />
+            <p:outputLabel value="Patrimonio: ($) *" styleClass="etiquetaFormulario" />
             <p:inputText id="txtPatrimonio" value="#{MbFormUnidadLegal.tamanoSeleccionado.patrimonio}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Patrimonio es requerido." label="Patrimonio"/>
             <p:message for="txtPatrimonio" />
 
-            <p:outputLabel value="Ingresos operacionales: *" styleClass="etiquetaFormulario" />
+            <p:outputLabel value="Ingresos operacionales: ($)*" styleClass="etiquetaFormulario" />
             <p:inputText id="txtIngresosOperacionales" value="#{MbFormUnidadLegal.tamanoSeleccionado.ingresosOperacionales}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Ingresos operacionales son requeridos." label="Ingresos operacionales"/>
             <p:message for="txtIngresosOperacionales" />
 
-            <p:outputLabel value="Utilidad bruta: *" styleClass="etiquetaFormulario" />
+            <p:outputLabel value="Utilidad bruta: ($) *" styleClass="etiquetaFormulario" />
             <p:inputText id="txtUtilidadBruta" value="#{MbFormUnidadLegal.tamanoSeleccionado.utilidadBruta}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="La Utilidad bruta es requerido." label="Utilidad bruta"/>
             <p:message for="txtUtilidadBruta" />
 
-            <p:outputLabel value="Gastos operacionales de administración: *" styleClass="etiquetaFormulario" />
+            <p:outputLabel value="Gastos operacionales de administración: ($) *" styleClass="etiquetaFormulario" />
             <p:inputText id="txtGastosOperacionalesAdminitracion" value="#{MbFormUnidadLegal.tamanoSeleccionado.gastosOperacionalesAdmon}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Gastos operacionales de administración son requeridos." label="Gastos operacionales de administración"/>
             <p:message for="txtGastosOperacionalesAdminitracion" />
 
-            <p:outputLabel value="Gastos operacionales de venta: *" styleClass="etiquetaFormulario" />
+            <p:outputLabel value="Gastos operacionales de venta: ($) *" styleClass="etiquetaFormulario" />
             <p:inputText id="txtGastosOperacionalesVenta" value="#{MbFormUnidadLegal.tamanoSeleccionado.gastosOperacionalesVenta}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Gastos operacionales de venta son requeridos." label="Gastos operacionales de venta"/>
             <p:message for="txtGastosOperacionalesVenta" />
 
-            <p:outputLabel value="Gastos operacionales:* " styleClass="etiquetaFormulario" />
+            <p:outputLabel value="Gastos operacionales: ($) * " styleClass="etiquetaFormulario" />
             <p:inputText id="txtGastosOperacionales" value="#{MbFormUnidadLegal.tamanoSeleccionado.gastosOperacionales}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Gastos operacionales son requeridos." label="Gastos operacionales"/>
             <p:message for="txtGastosOperacionales" />
 
-            <p:outputLabel value="Utilidad operativa: *" styleClass="etiquetaFormulario" />
+            <p:outputLabel value="Utilidad operativa: ($) *" styleClass="etiquetaFormulario" />
             <p:inputText id="txtUtilidadOperativa" value="#{MbFormUnidadLegal.tamanoSeleccionado.utilidadOperativa}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="La Utilidad operativa es requerida." label="Utilidad operativa"/>
             <p:message for="txtUtilidadOperativa" />
 
@@ -82,7 +82,7 @@
             <p:inputText id="txtEbitda" value="#{MbFormUnidadLegal.tamanoSeleccionado.ebitda}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El EBITDA es requerido." label="EBITDA"/>
             <p:message for="txtEbitda" />
 
-            <p:outputLabel value="Utilidad neta: *" styleClass="etiquetaFormulario" />
+            <p:outputLabel value="Utilidad neta: ($) *" styleClass="etiquetaFormulario" />
             <p:inputText id="txtUtilidadNeta" value="#{MbFormUnidadLegal.tamanoSeleccionado.utilidadNeta}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="La Utilidad neta es requerido." label="Utilidad neta"/>
             <p:message for="txtUtilidadNeta" />
 
