--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
@@ -31,24 +31,24 @@
                                 <h4 class="titulo-left-h3">Actualizar información desde formulario</h4>
                                 <p>En esta sección el usuario puede actualizar los datos en linea directamente desde un formulario electronico, el cual
                                     presenta los datos del grupo empresarial prediligenciados.</p>
-                                <p:commandButton value="Formulario" action="/interfaz/grupo-empresa/itz-formulario-grupo-empresa.xhtml" />
+                                <p:commandButton value="Formulario" action="/interfaz/grupo-empresa/itz-formulario-grupo-empresa.xhtml" ajax="false"/>
                             </div>
                         </div>
                         <div class="ui-grid-row">
                             <div class="ui-grid-col-12">
-                                <h4 class="titulo-left-h3">Actualizar información desde archivo XLS</h4>
+                                <!--h4 class="titulo-left-h3">Actualizar información desde archivo XLS</h4>
                                 <p>En esta sección el usuario puede descargar un archivo XLS, que contiene la información del grupo empresarial, la cual podra
                                     actualizar de forma local y al terminar subir el archivo para actualizar los datos.</p>
                                 <p:commandButton id="btnGenerarXlsGrupoEmpresa" value="Generar Excel" ajax="false" 
                                                  actionListener="#{MbEscribirExcelGrupoEmpresa.generarArchivoXls(nerv['plantilla.grupoEmpresarial.path'],
-                                                                   nerv['plantilla.grupoEmpresarial.archivo'], MbLogin.usuarioLogueado.idIdentificacion,'GRUPO')}"
-                                                 onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
-                                    <p:fileDownload value="#{MbEscribirExcelGrupoEmpresa.file}" />
-                                </p:commandButton>
-                                <p>Subir el archivo con la ifnromación del grupo empresarial diligenciada para actualizar los datos.</p>
-                                <ui:include src="../utilidades/cpt-cargar-archivo-xls.xhtml">
-                                    <ui:param name="frmPadre" value="frmInfoGrupoEmpresa" />
-                                </ui:include>
+                                                  nerv['plantilla.grupoEmpresarial.archivo'], MbLogin.usuarioLogueado.idIdentificacion,'GRUPO')}"
+                                onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
+                   <p:fileDownload value="#{MbEscribirExcelGrupoEmpresa.file}" />
+               </p:commandButton>
+               <p>Subir el archivo con la ifnromación del grupo empresarial diligenciada para actualizar los datos.</p>
+               <ui:include src="../utilidades/cpt-cargar-archivo-xls.xhtml">
+                   <ui:param name="frmPadre" value="frmInfoGrupoEmpresa" />
+               </ui:include-->
                             </div>
                         </div>
                     </div>
@@ -70,10 +70,10 @@
                         Descargando reporte...<br />
                         <p:graphicImage name="imagen/ajax-loading.gif"/>
                     </p:blockUI>
-                    <p:blockUI block="@form" trigger="btnGenerarXlsGrupoEmpresa" >
+                    <!--p:blockUI block="@form" trigger="btnGenerarXlsGrupoEmpresa" >
                         Generando archivo...<br />
                         <p:graphicImage name="imagen/ajax-loading.gif"/>
-                    </p:blockUI>
+                    </p:blockUI-->
 
                 </h:form>
 
